[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Sprites/Area-veneno.png" type="Texture" id=1]
[ext_resource path="res://Assets/Enimies/Poison.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=2]
radius = 16.7718

[node name="Veneno" type="Area2D"]
scale = Vector2( 2, 2 )
collision_layer = 0
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Timer_sumir" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true
[connection signal="area_entered" from="." to="." method="_on_Veneno_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Veneno_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_Veneno_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Veneno_body_exited"]
[connection signal="timeout" from="Timer_sumir" to="." method="_on_Timer_sumir_timeout"]
